--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -41,17 +41,17 @@ services:
         - ./Caddyfile:/etc/caddy/Caddyfile
         - ../:/app:rw
         - /etc/localtime:/etc/localtime:ro
-    ngrok: # 使用 ngrok 内网穿透访问，也可以注释这块内容，自行指定域名结合caddy使用
-      image: ngrok/ngrok:latest
-      container_name: ngrok
-      command:
-        - "http"
-        - "--url"
-        - ${NGROK_DOMAIN} # 请替换为你的 ngrok 域名, 也可以直接删除这行使用随机域名
-        - "caddy:80"
-      depends_on:
-        - caddy
-      environment:
-        NGROK_AUTHTOKEN: ${NGROK_AUTHTOKEN} # 请替换为你的 ngrok 令牌 或者在环境变量中设置 NGROK_AUTHTOKEN=你的令牌
-      ports:
-        - 4040:4040
+    # ngrok: # 使用 ngrok 内网穿透访问，也可以注释这块内容，自行指定域名结合caddy使用
+    #   image: ngrok/ngrok:latest
+    #   container_name: ngrok
+    #   command:
+    #     - "http"
+    #     - "--url"
+    #     - ${NGROK_DOMAIN} # 请替换为你的 ngrok 域名, 也可以直接删除这行使用随机域名
+    #     - "caddy:80"
+    #   depends_on:
+    #     - caddy
+    #   environment:
+    #     NGROK_AUTHTOKEN: ${NGROK_AUTHTOKEN} # 请替换为你的 ngrok 令牌 或者在环境变量中设置 NGROK_AUTHTOKEN=你的令牌
+    #   ports:
+    #     - 4040:4040
